@@ -2,6 +2,7 @@
 
 2016.04.14 - version 1.6.2
  * [Fixed] Undefined default error
+ * [New] Repeatable groups
 
 2014.07.08 - version 1.5.0
  * [New] Added "password" field
